@@ -1,3 +1,9 @@
+2007-11-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* gsd-media-keys-window.c: (gsd_media_keys_window_init): slightly
+	increase the popup window size again (130x130 at 640x480 and scaled
+	from there)
+
 2007-11-10  Jens Granseuer  <jensgr@gmx.net>
 
 	The media window popup has a fixed size 300x300 when running in
